force-app/main/default/objects/Site_Page_Resource__c/Site_Page_Resource__c.object-meta.xml
<CustomObject>
    <description>A pdf, image, or web address to display as a resource on a site page</description>
    <label>Site Page Resource</label>
    <nameField>
        <label>Site Page Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Page Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>