force-app/main/default/objects/Site_Page_Resource__c/fields/Account_Site_Page__c.field-meta.xml
<CustomField>
    <fullName>Account_Site_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site Page</label>
    <referenceTo>Account_Site_Page__c</referenceTo>
    <relationshipLabel>Site Page Resources</relationshipLabel>
    <relationshipName>Site_Page_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>