force-app/main/default/objects/Site_Page_Resource__c/fields/Open_Link_in_New_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_Link_in_New_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, clicking on this link will open the resource url in a new browser tab</description>
    <inlineHelpText>If checked, clicking on this link will open the resource url in a new browser tab</inlineHelpText>
    <label>Open Link in New Tab</label>
    <type>Checkbox</type>
</CustomField>