force-app/main/default/objects/Site_Page_Resource__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which this resource appears on the site page. Lowest values first, nulls last.</description>
    <inlineHelpText>The order in which this resource appears on the site page. Lowest values first, nulls last.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>